# PokerRoom

./: .gitignore  CMakeLists.txt  Make  Makefile  README.md
bot1/: CMakeLists.txt  bot_client.cpp  client.cpp  client.h  client_game.h  client_help.h  client_menu.h  count_comb.c  negotiator.cpp  play_info.h
bot2/: CMakeLists.txt  bot_client.cpp  client.cpp  client.h  client_game.h  client_help.h  client_menu.h  count_comb.c  negotiator.cpp
bot3/: CMakeLists.txt  NeyronBot.cpp  NeyronBot.h  bot_client.cpp  client.h  negotiator.h  play_info.h  tester.cpp
bot3/Bot3/: PreFlop_first.bot  River_first.bot
bot3/neyron/: neyron.h  web.cpp  web.h
bot3/weight/: Flop_first.bot  Turn_first.bot
bot4/: CMakeLists.txt  NeyronBot.cpp  NeyronBot.h  bot_client.cpp  client.h  negotiator.h  tester.cpp  vector.learn
bot4/neyron/: neyron.cpp  web.cpp  web.h
bot4/weight/: Flop_second.bot  PreFlop_second.bot  River_second.bot  Turn_second.bot
client/: CMakeLists.txt  admin.cpp  admin.h  button.cpp  button.h  client.cpp  client.h  game.cpp  game.h  help.cpp  help.h  menu.cpp  menu.h  play_info.h  poker_client.cpp  slide.cpp  slide.h
client/source/: help.help
creator/: starter.cpp
server/: CMakeLists.txt  count_comb.h  display.cpp  display.h  play_info.h  poker_table.h  server.cpp  table.h
server/source/: help.help
test/: Untitled.ipynb
test/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
